fix `st`: stretch and add alignment examples

--- a/examples/css/atomic.css
+++ b/examples/css/atomic.css
@@ -46,14 +46,80 @@
 .D\(n\)\! {
   display: none !important;
 }
+.As\(b\) {
+  align-self: baseline;
+}
+.As\(c\) {
+  align-self: center;
+}
+.As\(fe\) {
+  align-self: flex-end;
+}
+.As\(fs\) {
+  align-self: flex-start;
+}
+.As\(st\) {
+  align-self: stretch;
+}
+.Fld\(c\) {
+  flex-direction: column;
+}
+.Fxf\(w\) {
+  flex-flow: wrap;
+}
+.Ai\(b\) {
+  align-items: baseline;
+}
+.Ai\(c\) {
+  align-items: center;
+}
+.Ai\(fe\) {
+  align-items: flex-end;
+}
+.Ai\(fs\) {
+  align-items: flex-start;
+}
+.Ai\(st\) {
+  align-items: stretch;
+}
+.Ac\(c\) {
+  align-content: center;
+}
+.Ac\(fe\) {
+  align-content: flex-end;
+}
+.Ac\(fs\) {
+  align-content: flex-start;
+}
+.Ac\(sa\) {
+  align-content: space-around;
+}
+.Ac\(sb\) {
+  align-content: space-between;
+}
+.Ac\(se\) {
+  align-content: space-evenly;
+}
+.Ac\(st\) {
+  align-content: stretch;
+}
 .Fl\(start\) {
   float: left;
 }
 .Fz\(2rem\) {
   font-size: 2rem;
 }
+.Gp\(10px\) {
+  gap: 10px;
+}
 .H\(100\%\) {
   height: 100%;
+}
+.H\(200px\) {
+  height: 200px;
+}
+.H\(20px\) {
+  height: 20px;
 }
 .H\(300px\) {
   height: 300px;
@@ -75,6 +141,12 @@
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
+.Mend\(10px\) {
+  margin-right: 10px;
+}
+.Mb\(10px\) {
+  margin-bottom: 10px;
+}
 .bar .bar_Mbm\(s\) {
   mix-blend-mode: saturation;
 }
@@ -86,6 +158,9 @@
 }
 .Op\(1\)\! {
   opacity: 1 !important;
+}
+.P\(10px\) {
+  padding: 10px;
 }
 .P\(1rem\) {
   padding: 1rem;
@@ -117,14 +192,20 @@
 .W\(10\/12\) {
   width: 83.3333%;
 }
+.W\(100\%\), .W\(12\/12\) {
+  width: 100%;
+}
 .W\(11\/12\) {
   width: 91.6667%;
 }
-.W\(12\/12\) {
-  width: 100%;
+.W\(160px\) {
+  width: 160px;
 }
 .W\(2\/12\) {
   width: 16.6667%;
+}
+.W\(20px\) {
+  width: 20px;
 }
 .W\(3\/12\) {
   width: 25%;
